--- a/style.css
+++ b/style.css
@@ -59,85 +59,19 @@ body {
 .input-box {
     position: relative;
     width: 100%;
-    /* height: 50px; */
-    /* border-bottom: 2px solid #162938; */
     margin: 10px 0;
 }
 
-.input-box select {
-    /* width: 180px; */
+.input-box label input {
+    position: relative;
+    top: 1px;
 }
 
-.input-box input {
-    /* width: 100%; */
-    /* height: 100%; */
-    /* background: transparent; */
-    /* border: none; */
-    /* outline: none; */
-}
-
-#password-length-input {
-    /* width: 40px; */
+.number-input {
     width: 100%;
     height: 28px;
     text-align: center;
 }
-
-/* .range {
-    height: 80px;
-    width: 100%;
-}
-
-.range .slider-value {
-    position: relative;
-    width: 100%;
-}
-
-.range .slider-value span {
-    position: absolute;
-    height: 45px;
-    width: 45px;
-    background-color: #664AFF;
-    color: #fff;
-    font-weight: 500;
-    top: -40px;
-    transform: translateX(-50%);
-    line-height: 55px;
-    z-index: 2;
-}
-
-.range .field {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-.range .field .value {
-    position: absolute;
-    font-size: 18px;
-    font-weight: 600;
-    color: #664AFF;
-}
-
-.range .field .value.left {
-    left: -22px;
-}
-
-.range .field .value.right {
-    right: -43px;
-}
-
-.range .field input {
-    -webkit-appearance: none;
-    height: 3px;
-    width: 100%;
-    background-color: #ddd;
-    border-radius: 5px;
-    outline: none;
-    border: none;
-} */
 
 .input-box .checkbox {
     accent-color: #222;
@@ -161,7 +95,15 @@ body {
     margin-top: 10px;
 }
 
-#generated-password-input{
+#generated-passwords-area {
+    width: 100%;
+    resize: none;
+    padding: 0 25px 0 3px;
+    text-align: center;
+    /* padding: 3px; */
+}
+
+/* #generated-password-input{
     width: 100%;
     height: 28px;
     text-align: left;
@@ -174,6 +116,7 @@ body {
     bottom: 39px;
 }
 
+
 #copy-button {
     cursor: pointer;
 }
@@ -181,8 +124,8 @@ body {
 #snackbar {
     visibility: hidden;
 
-    /* color: #fff; */
-    /* background-color: #333; */
+    color: #fff;
+    background-color: #333;
     color: #222;
     background-color: #fff;
 
@@ -221,7 +164,7 @@ body {
 @keyframes fadeout {
     from {bottom: var(--snackbar-bottom-height); opacity: 1;}
     to {bottom: 0; opacity: 0;}
-}
+} */
 
 footer {
     position: absolute;
